<resources>
    <string name="about">About</string>
    <string name="all">All</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="api_auth_info">Get User Info</string>
    <string name="api_auth_login">Login</string>
    <string name="api_auth_logout">Logout</string>
    <string name="api_auth_refresh">Refresh Security Token</string>
    <string name="api_auth_register">Register</string>
    <string name="api_auth_resend">Resend Code</string>
    <string name="api_auth_verify">Verify OTP</string>
    <string name="api_favorite_set">Set Favorite</string>
    <string name="api_favorite_delete">Remove Favorite</string>
    <string name="api_loading_data">Loading Data</string>
    <string name="api_review_get">Get Reviews</string>
    <string name="api_review_submit">Submit Review</string>
    <string name="api_search">Search</string>
    <string name="api_user_password">Change Your Password</string>
    <string name="api_user_purchases">Get User Purchases</string>
    <string name="api_user_subscriptions">Get User Subscriptions</string>
    <string name="app_name">Film Buff</string>
    <string name="apply">Apply</string>
    <string name="audio">Audio:</string>
    <string name="cast">Cast</string>
    <string name="change">Change</string>
    <string name="change_password">Change password</string>
    <string name="coins">Coins</string>
    <string name="comment">Comment</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="daenerys_targaryen">Daenerys Targaryen</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="duration">Duration</string>
    <string name="email">Email</string>
    <string name="emilia_clarke">Emilia Clarke</string>
    <string name="end">End</string>
    <string name="enter">Login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="error_empty_comment">Please enter your comment!</string>
    <string name="error_new_password">New password must be at least 8 characters!</string>
    <string name="error_old_password">Enter old password!</string>
    <string name="error_repeat_password">Repeat password must be the same as new password!</string>
    <string name="error_unknown">Unknown Error!</string>
    <string name="exit_message">Are you sure you want\nto exit Film-Buff?</string>
    <string name="fantasy">Fantasy</string>
    <string name="favorites">Favorites</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="format_subscription_remaining">%d day(s) left</string>
    <string name="game_of_thrones">Game of Thrones</string>
    <string name="genre">Genre</string>
    <string name="hashtag" translatable="false">#</string>
    <string name="imdb" translatable="false">IMDB</string>
    <string name="incorrect_code">Incorrect code, please try again!</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="language">Language</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_fa" translatable="false">فارسی</string>
    <string name="loading_message">Please wait…</string>
    <string name="loading_title">Loading</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="message_password_changed">Password has been changed successfully.</string>
    <string name="more">More</string>
    <string name="movie_name">The Game of Thrones</string>
    <string name="movies">Movies</string>
    <string name="new_password">New Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="no_subscription">None</string>
    <string name="old_password">Old Password</string>
    <string name="otp_sent">OTP code has been sent to:</string>
    <string name="password">Password</string>
    <string name="pending_review">Pending Review</string>
    <string name="permission_action">Grant Permission</string>
    <string name="permission_message">This application requires notification permission.</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="purchased_coins">Purchased Coins</string>
    <string name="quality">Quality:</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="reference">Reference</string>
    <string name="register">Register</string>
    <string name="registration">Register</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="required">Fill required fields.</string>
    <string name="resend_code">Resend Code</string>
    <string name="reviews">Reviews</string>
    <string name="reviews_description">Amazing! The movie was awesome. Thank you for amazing experience!</string>
    <string name="sample_10_digits" translatable="false">1234567890</string>
    <string name="sample_2_digits" translatable="false">12</string>
    <string name="sample_5_digits" translatable="false">12345</string>
    <string name="sample_bio">Emilia Clarke, born on October 23, 1986, in London, is a British actress whose magnetic presence and fearless performances catapulted her to international fame. A graduate of the Drama Centre London, she burst onto the global stage with her breakout role in Game of Thrones, captivating millions with her power and poise. Beyond Westeros, Clarke has showcased her versatility in films like Me Before You, Solo: A Star Wars Story, and Last Christmas. Admired for her charm, wit, and resilience—especially after surviving two life-threatening brain aneurysms—Clarke is as much a warrior off-screen as she is on it, becoming an inspiration and advocate for brain injury survivors worldwide.</string>
    <string name="sample_coins" translatable="false">1361</string>
    <string name="sample_date" translatable="false">2025/01/01</string>
    <string name="sample_days">365 Days</string>
    <string name="sample_email" translatable="false">admin@film-buff.ir</string>
    <string name="sample_episode">Episode 1</string>
    <string name="sample_episode_description">King Robert asks Ned Stark to be Hand of the King, while across the sea, Daenerys Targaryen is married off to Khal Drogo. Meanwhile, a supernatural threat stirs beyond the Wall, and young Bran Stark witnesses a dark secret that nearly costs him his life.</string>
    <string name="sample_rating" translatable="false">9.2</string>
    <string name="sample_role">In Game of Thrones, Emilia Clarke portrays Daenerys Targaryen, the exiled princess of a fallen dynasty who rises from obscurity to become a fierce contender for the Iron Throne. Starting as a timid girl sold into marriage, Daenerys evolves into the "Mother of Dragons," liberating the oppressed and amassing armies across continents. Her journey is marked by fire, blood, and moral complexity, as her dream of breaking the wheel of tyranny eventually clashes with her growing ruthlessness. Clarke’s portrayal imbued Daenerys with both vulnerability and commanding intensity, making her one of the series’ most iconic and divisive characters.</string>
    <string name="sample_season_description">Noble houses fight for power, Eddard Stark is betrayed, Daenerys Targaryen rises, and dark threats stir beyond the Wall.</string>
    <string name="sample_season_title">Season 01</string>
    <string name="sample_story">Game of Thrones is a fantasy epic that chronicles the brutal and complex power struggles among noble families vying for control of the Iron Throne in the Seven Kingdoms of Westeros. As political alliances shift and betrayals abound, the story weaves together the fates of characters like Jon Snow, Daenerys Targaryen, and Tyrion Lannister, while supernatural threats—most notably the White Walkers—loom in the North. Themes of honor, ambition, loyalty, and survival drive the narrative, culminating in a climactic battle for the fate of the realm and questioning who is truly fit to rule.</string>
    <string name="sample_username" translatable="false">\@mlfr2kx</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="search">Search</string>
    <string name="seasons">Seasons</string>
    <string name="series">Series</string>
    <string name="sort_popularity">Popularity</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_release">Release</string>
    <string name="sorting">Sorting</string>
    <string name="start">Start</string>
    <string name="story">Story</string>
    <string name="submit_your_review">Submit Your Review</string>
    <string name="subscription_colon">Subscription:</string>
    <string name="subtitle">Subtitle:</string>
    <string name="tapsell_app" translatable="false">djfbetfbatdbjibsrmtahmarjsqhlcnncnmlscqmsolnfqmbssilrtkrffthddierfbjjb</string>
    <string name="tapsell_interstitial" translatable="false">67cb3efdfb36b54b43f2cb7c</string>
    <string name="tapsell_rewarded" translatable="false">67cb3edbc1914d5fb3eec60e</string>
    <string name="title">Title</string>
    <string name="trailer">Trailer</string>
    <string name="username">Username</string>
    <string name="username_already_taken">Username already taken!</string>
    <string name="verify">Verify</string>
    <string name="vip_subscriptions">VIP Subscriptions</string>
    <string name="visit_delete">Deleting Visit</string>
    <string name="visit_save">Saving Visit</string>
    <string name="wrong_email">Wrong email address?</string>
</resources>