<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue_dark">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cover" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/transparent_black" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFavorite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite_empty" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/bold"
        android:text="@string/movie_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCalendar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:srcCompat="@drawable/ic_calendar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/sample_5_digits"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivCalendar"
        app:layout_constraintStart_toEndOf="@+id/ivCalendar"
        app:layout_constraintTop_toTopOf="@+id/ivCalendar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivVideo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ivCalendar"
        app:layout_constraintStart_toEndOf="@+id/tvCalendar"
        app:layout_constraintTop_toTopOf="@+id/ivCalendar"
        app:srcCompat="@drawable/ic_video" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/regular"
        android:text="@string/seasons"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivCalendar"
        app:layout_constraintStart_toEndOf="@+id/ivVideo"
        app:layout_constraintTop_toTopOf="@+id/ivCalendar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFilm"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCalendar"
        app:srcCompat="@drawable/ic_film" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFilm" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/ivCover"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabTextColor="@color/blue_400">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold"
                android:text="@string/story"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold"
                android:text="@string/story"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold"
                android:text="@string/cast"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:itemCount="6"
                tools:listitem="" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>